changes expression methods
